<resources>
    <string name="app_name">InNerve App</string>
    <string name="title_activity_single_user">Innerve 4.0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">213018529641472</string>
    <string name="fb_login_protocol_scheme">fb213018529641472</string>
    <string name="toolbar_report">Report</string>
    <string name="toolbar_sign_out">Sign Out</string>
    <string name="pr_login_label">PR Registration</string>

    <string name="user_preference">userpref</string>
    <string name="menu_about">About</string>
    <string name="menu_theme">Theme</string>
    <string name="menu_timeline">Timeline</string>
    <string name="menu_sponsors">Sponsors</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_contactus">Contact Us</string>
    <string-array name="Count">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Not Decided</item>
    </string-array>
    <string-array name="Theme">
        <item>Automation</item>
        <item>Healthcare</item>
        <item>AI / ML</item>
        <item>Smart City</item>
        <item>Cyber Security</item>
        <item>Blockchain</item>
    </string-array>
    <string-array name="themes_description">
        <item>Mission to help developers automate repetitive processes and to increase employee productivity. A world of devices connected by internet opens up opportunities for us that were previously unthinkable.</item>
        <item>Looking at Healthcare in a completely new way - focusing on earlier, pre-symptomatic disease detection and prevention, instead of late diagnosis - helping clinicians access more information and intervene sooner with targeted treatments so their patients can lead longer, fuller lives.</item>
        <item>With the help of AI. Not only it helps in increasing organizational efficiency, but it also reduces the possibility of any critical error. AI helps to detect irregular patterns like payment fraud and alert the firm about any suspicious activity.</item>
        <item>We are letting the participants to take an un-orthodox approach for fast-paced growth and submit a development plan for betterment of the cities. This will let the participants to understand their challenges and by engaging with experts to get insights and solutions for a smarter way of developing city.</item>
        <item>Develop next generation security apps right from SCRATCH or based on the -CONTROL: A cryptographic Digital Control Platform. Participants will be provided access to -SDK and -ADAPTER with API with documentation which can help build security apps 2.0.</item>
        <item>Blockchain, is envisioned to revolutionize human society over the coming decades in ways yet unimagined. Block chain technology provides new infrastructure to build the next innovative applications beyond crypto currencies, driving profound, positive changes across business, communities and society.</item>
    </string-array>
    <string name="timelinet1">Recruitment of Our team</string>
    <string name="timelines1">The managing team was formed of first, second and third year students</string>
    <string name="timelinet2">Theme announced</string>
    <string name="timelines2">The final theme and problem statement for developement in hackathon announced </string>
    <string name="timelinet3">Registration started</string>
    <string name="timelines3">The registration procedure started for joining the INNERVE 2k18 hackathon</string>
    <string name="timelinet4">Day One</string>
    <string name="timelines4">The idea presentation and selection of teams for second round</string>
    <string name="timelinet5">Day two</string>
    <string name="timelines5">Start of 24 hours hackathon.</string>
    <string name="timelinet6">The D day:final day</string>
    <string name="timelines6">End of long 24 hours hackathon , prize distribution and tech talk</string>
    <string name="timelined1">01/01/19</string>
    <string name="timelined2">01/01/19</string>
    <string name="timelined3">01/01/19</string>
    <string name="timelined4">01/01/19</string>
    <string name="timelined5">01/01/19</string>
    <string name="timelined6">01/01/19</string>
</resources>
