<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/home"
            android:title="Home" />
        <item
            android:id="@+id/nav_theme"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_theme" />
        <item
            android:id="@+id/nav_timeline"
            android:icon="@drawable/ic_access_time"
            android:title="@string/menu_timeline" />
        <item
            android:id="@+id/nav_sponsors"
            android:icon="@drawable/ic_people"
            android:title="@string/menu_sponsors" />
        <item
            android:id="@+id/nav_down"
            android:icon="@drawable/ic_file_download"
            android:title="Download Brochure" />

    </group>
    <item android:title="Communicate">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_faq"
                android:icon="@drawable/ic_assignment"
                android:title="@string/menu_faq" />
            <item
                android:id="@+id/nav_contactus"
                android:icon="@drawable/ic_account"
                android:title="@string/menu_contactus" />
            <item
                android:id="@+id/nav_team"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="Our Team" />
            </group>
        </menu>
    </item>

    <item android:title="User">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="Share" />
            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/ic_arrow"
                android:title="Sign Out"
                />
        </menu>
    </item>
</menu>
